# qsv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  _typos.toml  dotenv.template  rustfmt.toml
.github/workflows/: macOS-arm64-selfhosted-publish-nightly.yml  macOS-arm64-selfhosted-publish-qsvpy.yml  publish-deb-package.yml  publish-linux-glibc-231-musl-1124.yml  publish-linux-glibc-231-musl-123.yml  publish-linux-qsvpy-glibc-231-musl-123.yml  publish-nightly-glibc-231-musl-1124.yml  publish-nightly.yml  publish-portable.yml  publish-qsvpy.yml  publish-wix-installer.yml  publish.yml  rust-beta.yml  rust-macos-x86.yml  rust-musl.yml  rust-nightly-bleeding-edge.yml  rust-polars-nightly.yml  rust-polars-pinned-nightly.yml  rust-qsvdp.yml  rust-windows.yml  rust.yml  test-publish-nightly.yml
contrib/completions/examples/: qsv.bash  qsv.elv  qsv.fig.js  qsv.nu  qsv.ps1  qsv.zsh
contrib/completions/src/cmd/: diff.rs  excel.rs  extdedup.rs  fixlengths.rs  join.rs  joinp.rs  lens.rs  stats.rs  template.rs  validate.rs
docs/: ENVIRONMENT_VARIABLES.md  INTERPRETERS.md  PERFORMANCE.md  PERFORMANCE_TLDR.md
resources/test/: adur-public-toilets.csv.schema-default.expected.json  adur-public-toilets.csv.schema-strict.expected.json  boston311-10-boolean-1or0-stats.csv  boston311-10-boolean-tf-stats.csv  boston311-100-antimodes-len500-stats.csv  boston311-100-everything-8places-stats.csv  boston311-100-everything-date-stats-variance-stddev.csv  boston311-100-everything-date-stats.csv  boston311-100-everything-datenotime-stats.csv  boston311-100-everything-inferdates-defaultwhitelist-stats.csv  boston311-100-everything-nodate-stats.csv  boston311-100-pii-searchset.csv  boston311-100-stats.csv  boston311-100-with-nonascii-stats.csv  issue2391-test_ids.csv  public-toilets-schema.json
scripts/: benchmarks.sh
scripts/results/: benchmark_results.csv  benchmark_results_display.csv  latest_results.csv  latest_run_info.tsv  run_info_history.tsv
src/: clitypes.rs  config.rs  index.rs  lookup.rs  main.rs  maindp.rs  mainlite.rs  odhtcache.rs  select.rs  util.rs
src/cmd/: apply.rs  applydp.rs  behead.rs  cat.rs  clipboard.rs  count.rs  datefmt.rs  dedup.rs  describegpt.rs  diff.rs  edit.rs  enumerate.rs  excel.rs  exclude.rs  explode.rs  extdedup.rs  extsort.rs  fetch.rs  fetchpost.rs  fill.rs  fixlengths.rs  flatten.rs  fmt.rs  foreach.rs  frequency.rs  geocode.rs  headers.rs  index.rs  input.rs  join.rs  joinp.rs  json.rs  jsonl.rs  lens.rs  luau.rs  mod.rs  outliers.rs  partition.rs  pivotp.rs  pro.rs  (+26 more)
tests/: test_apply.rs  test_applydp.rs  test_behead.rs  test_cat.rs  test_clipboard.rs  test_combos.rs  test_comments.rs  test_count.rs  test_datefmt.rs  test_dedup.rs  test_diff.rs  test_edit.rs  test_enumerate.rs  test_excel.rs  test_exclude.rs  test_explode.rs  test_extdedup.rs  test_extsort.rs  test_fetch.rs  test_fill.rs  test_fixlengths.rs  test_flatten.rs  test_fmt.rs  test_foreach.rs  test_frequency.rs  test_geocode.rs  test_headers.rs  test_index.rs  test_input.rs  test_join.rs  test_joinp.rs  test_json.rs  test_jsonl.rs  test_luau.rs  test_outliers.rs  test_partition.rs  test_pivotp.rs  test_prompt.rs  test_pseudo.rs  test_py.rs  (+25 more)
tests/test_100/: lesson_0.rs  lesson_1.rs  lesson_2.rs
